# quartermaster

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_GUIDANCE.md  AGENTS_MD_GUIDANCE.md  AUTHORING_KITS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  MIGRATING-AUTHORIZATION.md  MIGRATING-KIT-LAYERS.md  OBSERVABILITY.md  OPERATIONS.md  QUARTERMASTER_TOML.md  QUICKSTART.md  README.md  RELEASING.md  SECURITY.md  Taskfile.yaml  changelog-releases.yaml  changelog.in  contract.md
.ai/: rules.md
.claude/: settings.json
.github/workflows/: build-push.yml  testing.yml
assets/prompts/: bootstrap-skills.md  maintain-project-skills.md
docs/: conf.py  index.md
docs/developer/: authoring-kits.md  contract.md  development.md  evaluating-kits.md  index.md  releasing.md
docs/developer/api/: index.md
docs/developer/migrations/: authorization.md  kit-layers.md
docs/operator/: index.md  observability.md  operations.md
docs/superpowers/specs/: 2026-06-30-onboarding-prompts-design.md
docs/user/: authoring-kits.md  connecting-an-agent.md  diagnostics.md  downstream-agent-guidance.md  evaluating-kits.md  index.md  quartermaster-toml.md  quickstart.md
scripts/: derive_channels.sh
server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
server/app/: __init__.py  auth.py  authz.py  changelog.py  clarify.py  config.py  dev_auth.py  docs_site.py  embeddings.py  gap.py  health.py  identity.py  kits.py  llm.py  logging_config.py  main.py  mcp_identity.py  mcp_logging.py  media_types.py  middleware.py  personalization.py  private_kits.py  prompts.py  rate_limit.py  requests.py  resolver.py  sampling.py  session_ledger.py  telemetry.py  templating.py  tokens.py  traits.py  user_agent.py  version.py  webui.py
server/app/assets/prompts/: audit-project-skills.md  bootstrap-sequence.md  capability-extension.md  catalog-evaluation.md  greet.md  integrate-project.md  legacy-assessment.md  quartermaster-toml.md  tech-debt-modernization.md  trait-selection-bootstrap.md
server/app/assets/text/: changelog.json  mcp-instructions.md
server/app/dav/: __init__.py  webdav_app.py
server/app/eval/: README.md  __init__.py  __main__.py  corpus.py  jobs.py  render.py  report.py  runner.py
server/app/eval/cases/: curated.yaml
server/app/notifications/: __init__.py  base.py  github.py  gitlab.py
server/app/observability/: __init__.py  local_store.py
server/app/routers/: __init__.py  app_tokens.py  auth_dev.py  clients.py  eval.py  integration.py  kits_admin.py  kits_layers.py  me.py  metrics.py  private_kits.py  roles.py
server/app/services/: __init__.py  eval_service.py  kit_service.py
server/app/storage/: __init__.py  app_tokens.py  client_registry.py  kit_writes.py  role_store.py  user_memory.py
server/docs/research/: private-kits-e2ee.md
server/tests/: conftest.py  test_app_tokens.py  test_auth.py  test_authz.py  test_changelog.py  test_clarify.py  test_claude_code_hooks.py  test_config.py  test_dav.py  test_dev_auth.py  test_docs_site.py  test_embeddings.py  test_eval_api.py  test_eval_prompt_tool.py  test_eval_report.py  test_eval_runner.py  test_gap.py  test_health.py  test_identity.py  test_integration_router.py  test_kit_admin.py  test_kits.py  test_kits_layers.py  test_llm.py  test_logging_config.py  test_main_github_gate.py  test_main_warmup.py  test_mcp_instructions.py  test_mcp_logging.py  test_me_memory_router.py  test_memory_tools.py  test_metrics_api.py  test_metrics_endpoint.py  test_metrics_local_store.py  test_middleware.py  test_native_prompts.py  test_notifications.py  test_personalization.py  test_private_kit_isolation.py  test_private_kits_api.py  (+16 more)
webui/: .env.example  .gitignore  .prettierrc.json  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/public/: config.js
webui/src/: App.vue  config.ts  main.ts
webui/src/api/: index.ts
webui/src/auth/: devAuth.ts  oidc.ts  reauthGuard.ts
webui/src/components/: AppTokensCard.vue  BaseChart.vue  BuildMeta.vue  ChartCard.vue  FieldHelp.vue  MarkdownView.vue  SectionHeader.vue  StatusChip.vue  TacticalCard.vue  ThemeToggle.vue
webui/src/composables/: useAppTokens.ts  useAuth.ts  useChangelog.ts  useIntegration.ts  useKitEditor.ts  useKitMetrics.ts  useKits.ts  useLoading.ts  useMe.ts  useMetrics.ts  usePrivateKits.ts  useRoles.ts  useThemeMode.ts
webui/src/constants/: fieldHelp.ts
webui/src/docs/claude-code/: qm-edit-reminder.sh  qm-prompt-reminder.sh  qm-record-resolve.sh  settings.json
webui/src/plugins/: echarts.ts  vuetify.ts
webui/src/router/: index.ts
webui/src/styles/: app.css
webui/src/types/: kit.ts  metrics.ts
webui/src/views/: AdminUsersView.vue  AuthCallbackView.vue  ChangelogView.vue  IntegrationView.vue  KitDetailView.vue  KitEditorView.vue  KitListView.vue  LandingView.vue  MetricsView.vue  MountSetupView.vue  PrivateKitsView.vue  metricsCharts.ts
webui/tests/: App.authless.test.ts  App.test.ts  config.test.ts
webui/tests/api/: index.test.ts
webui/tests/auth/: reauthGuard.test.ts
webui/tests/components/: AppTokensCard.test.ts  BuildMeta.test.ts  FieldHelp.test.ts  MarkdownView.test.ts  StatusChip.test.ts
webui/tests/composables/: useAppTokens.test.ts  useKitEditor.test.ts  useKitMetrics.test.ts  useKits.test.ts  useMe.test.ts  useMetrics.test.ts  useThemeMode.test.ts
webui/tests/router/: guard.authless.test.ts  guard.test.ts  routes.test.ts
webui/tests/views/: ChangelogView.test.ts  IntegrationView.test.ts  KitEditorView.test.ts  LandingView.test.ts  metricsCharts.test.ts
