[project]
name = "quartermaster"
version = "0.1.0"
description = "Keycloak-gated MCP server that serves AI instruction kits."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "a2wsgi>=1.10.10",
    "fastapi>=0.115",
    "fastmcp>=3.1.1",
    "gouge>=2.2.5",
    "httpx>=0.28",
    "limits>=3.13",
    "pydantic-settings>=2.7",
    "pyjwt[crypto]>=2.10",
    "uvicorn[standard]>=0.34",
    "wsgidav>=4.3.4",
]

[project.optional-dependencies]
# Local-embedding inference for `resolve_kits` (ONNX, no torch). Optional:
# without it the server degrades to the deterministic lexical floor. The
# Docker image installs this extra and prefetches the model.
embeddings = [
    "fastembed>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
# `slow` marks tests that load the real embedding model or hit a live LLM.
# They are deselected by default; run them explicitly with `-m slow` (or
# override with `-m ''`) in an environment where those backends are present.
addopts = "-m 'not slow'"
markers = [
    "slow: requires the real embedding model or a live LLM endpoint",
]

[tool.ruff]
# 80-character limit per the module-code-style-python / stack-fastapi-vuetify
# kits. Enforced here so the rule is not merely aspirational.
line-length = 80
target-version = "py312"

[tool.ruff.lint]
# E (pycodestyle, incl. E501 line length), F (pyflakes), W (warnings),
# I (import sorting), UP (pyupgrade). Do not blanket-suppress E501.
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# app/main.py deliberately calls configure_logging() before importing the
# modules that grab loggers, so import-time records are formatted. That forces
# those imports below the call — an intentional, documented exception to E402
# (imports-not-at-top), not the line-length rule, which is never suppressed.
"app/main.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
ignore_missing_imports = true
warn_unused_ignores = false
# The codebase is fully annotated; these checks keep it that way without
# demanding strict mode across third-party-shaped boundaries.
disallow_incomplete_defs = true
check_untyped_defs = true
