[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quartermaster"
version = "0.1.0"
description = "Keycloak-gated MCP server that serves AI instruction kits."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "a2wsgi>=1.10.10",
    "fastapi>=0.115",
    "fastmcp>=3.1.1",
    "gouge>=2.2.5",
    "httpx>=0.28",
    "limits>=3.13",
    "pydantic-settings>=2.7",
    "pyjwt[crypto]>=2.10",
    "tomli-w>=1.0",
    "uvicorn[standard]>=0.34",
    "wsgidav>=4.3.4",
]

[project.optional-dependencies]
# Local-embedding inference for `resolve_kits` (ONNX, no torch). Optional:
# without it the server degrades to the deterministic lexical floor. The
# Docker image installs this extra and prefetches the model.
embeddings = [
    "fastembed>=0.4",
]
# OpenTelemetry metrics + traces and tiktoken token counting (see
# docs/observability.md). Optional: without it the instrumentation code is
# inert (no-op tracer, in-process no-op metrics) and token sizes fall back to
# a bytes/4 estimate. The Docker image installs this extra and pre-seeds the
# tiktoken vocab for offline use.
telemetry = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-exporter-prometheus>=0.48b0",
    # Provides the stdlib-logging -> OTLP handler that replaces the now
    # deprecated opentelemetry.sdk._logs.LoggingHandler (see telemetry.py
    # _build_logging_handler). 0.49b0 aligns with opentelemetry-sdk 1.28+.
    "opentelemetry-instrumentation-logging>=0.49b0",
    "prometheus-client>=0.20",
    "tiktoken>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    # Changelog processor (render-and-commit): turns the repo-root changelog.in
    # into the root CHANGELOG.md and the served app/assets/text/changelog.json.
    # Dev/build-only — never imported at runtime; run via `task changelog`.
    "clproc>=2024",
]

# Scope wheel discovery to the app package explicitly. Auto-discovery would
# otherwise trip over sibling dirs (e.g. a local `var/`) under a flat layout;
# pinning to `app*` keeps the build deterministic — it exists so the install
# in Dockerfile produces `quartermaster-*.dist-info`, letting
# importlib.metadata.version("quartermaster") report the real OTEL
# service.version instead of the "0.0.0" fallback.
[tool.setuptools.packages.find]
include = ["app*"]

# Ship the bundled text assets inside the wheel; setuptools packages only `.py`
# by default. Loaded at runtime via app.templating (importlib.resources). The
# `.md` glob covers the MCP prompt bodies and server-instructions body; the
# `.json` glob covers the generated changelog (assets/text/changelog.json,
# rendered from the repo-root changelog.in by `task changelog`).
[tool.setuptools.package-data]
app = ["assets/**/*.md", "assets/**/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
# `slow` marks tests that load the real embedding model or hit a live LLM.
# They are deselected by default; run them explicitly with `-m slow` (or
# override with `-m ''`) in an environment where those backends are present.
addopts = "-m 'not slow'"
markers = [
    "slow: requires the real embedding model or a live LLM endpoint",
]

[tool.ruff]
# 80-character limit per the module-code-style-python / stack-fastapi-vuetify
# kits. Enforced here so the rule is not merely aspirational.
line-length = 80
target-version = "py312"

[tool.ruff.lint]
# E (pycodestyle, incl. E501 line length), F (pyflakes), W (warnings),
# I (import sorting), UP (pyupgrade). Do not blanket-suppress E501.
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# app/main.py deliberately calls configure_logging() before importing the
# modules that grab loggers, so import-time records are formatted. That forces
# those imports below the call — an intentional, documented exception to E402
# (imports-not-at-top), not the line-length rule, which is never suppressed.
"app/main.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
ignore_missing_imports = true
warn_unused_ignores = false
# The codebase is fully annotated; these checks keep it that way without
# demanding strict mode across third-party-shaped boundaries.
disallow_incomplete_defs = true
check_untyped_defs = true
